<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bagpuncherbkgrnd"
    android:id="@+id/gameBG"
    >


    <TextView
        android:id="@+id/textView3"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:layout_marginTop="64dp"
        android:text="Speedbag"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/collectPH"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="380dp"
        android:layout_height="44dp"
        android:shadowColor="#FA0202"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/titlebackgrnd"
        android:text="@string/bag_puncher"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="30sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />

    <TextView
        android:id="@+id/messageToPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/tear_it_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <ImageButton
        android:id="@+id/punchingBagHitMarker"
        android:layout_width="167dp"
        android:layout_height="511dp"
        android:layout_centerInParent="true"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/button_to_punch_for_points"
        android:focusable="true"
        android:src="@drawable/bag"
        android:text="@string/hit_me"
        app:layout_constraintBottom_toTopOf="@+id/scoreBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageToPlayer"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/scoreBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/punchingBagHitMarker"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:inputType="number"
        android:text="@string/total_hits"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/upgrades"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="104dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/buttonbackgrounds"
        android:text="@string/upgrades"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905"
        />

    <Button
        android:id="@+id/collectPH"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="77dp"
        android:layout_height="64dp"
        android:background="@drawable/collect_hiticon"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <Button
        android:id="@+id/speedbagButton"
        android:layout_width="77dp"
        android:layout_height="64dp"
        android:background="@drawable/speedbag"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:layout_marginTop="64dp"
        android:text="Collect hits"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/collectPH"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/displayNum"
        android:layout_width="35sp"
        android:text="+1"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:layout_height="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/punchingBagHitMarker"
        app:layout_constraintEnd_toEndOf="@+id/punchingBagHitMarker"
        app:layout_constraintStart_toStartOf="@+id/punchingBagHitMarker"
        app:layout_constraintTop_toBottomOf="@+id/messageToPlayer" />

    <Button
        android:id="@+id/achievementsButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/buttonbackgrounds"
        android:text="Achievements"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <Button
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/buttonbackgrounds"
        android:text="@string/store"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/achievementsButton"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toEndOf="@+id/upgrades"
        app:layout_constraintTop_toBottomOf="@+id/punchingBagHitMarker"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/scoreAddition"
        android:layout_width="150sp"
        android:layout_height="90sp"
        android:gravity="center"
        android:text="+0"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/punchingBagHitMarker"
        app:layout_constraintVertical_bias="0.818"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>